--- a/backup.conf
+++ b/backup.conf
@@ -52,8 +52,8 @@ exclude /user/porn/
 # Exclude everything in /home/user/mp3
 exclude /user/mp3/
 
-# It's a good idea to exclude Netscape cache
-exclude /user/.netscape/cache/
+# It's a good idea to exclude Firefox cache
+exclude /user/.mozilla/firefox/*/Cache/
 
 # It is also possible to include specific directories with the include
 # directives. The include and exclude lines are simply passed to rsync.
