--- a/backup.conf
+++ b/backup.conf
@@ -12,12 +12,22 @@
 client user@some.where.com:/home/user
 
 # The sshid line specifies what ssh identity file should be used
-# for ssh connections. You can either specify a path relative to
+# for ssh connections with the client. You can either specify a path relative to
 # the location of the backup.conf file, or an absolute path. I recommend
 # that you keep the sshid file in the same directory as the backup.conf
 # file (it ought to be read write protected!)
 
 sshid backup.identity
+
+# It is possible to make a backup of the backup. This is called
+# "secondary backup". The location of the secondary backup is given
+# in the same was as the client above. You must also specify a sshid, like above.
+# You may leave this commented out if you do not have secondary backups.
+# If you define this, secondary backups will happen after each backup,
+# unless explicitly prevented with the --nosecondary option on the command line.
+
+# secondary user@super.secure.com:/my/secondary/backups
+# secondary_sshid secondary.identity
 
 # The keep line specifies which old backups should be kept. It
 # takes exactly five numerical arguments, d w m h y, where
